* 67_udm-dns/    22_dns_host_record_creation_with_all_attributes,    50_dns_reverse_zone_check_soa_record_serial_incrementation,    24_dns_host_record_creation_set_a,    49_dns_reverse_zone_check_soa_record,    25_dns_host_record_modification_set_a,    27_dns_host_record_modification_append_a,    72_dns_host_record_modification_remove_a,    26_dns_host_record_creation_append_a:
   Tests extended with IPv6 cases (Bug #33041)


git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52638 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,18 @@
+ucs-test (4.0.166-66) unstable; urgency=low
+
+  * 67_udm-dns/
+    22_dns_host_record_creation_with_all_attributes,
+    50_dns_reverse_zone_check_soa_record_serial_incrementation,
+    24_dns_host_record_creation_set_a,
+    49_dns_reverse_zone_check_soa_record,
+    25_dns_host_record_modification_set_a,
+    27_dns_host_record_modification_append_a,
+    72_dns_host_record_modification_remove_a,
+    26_dns_host_record_creation_append_a:
+    Tests extended with IPv6 cases (Bug #33041)
+
+ -- Dmitry Galkin <galkin@univention.de>  Fri, 08 Aug 2014 11:31:51 +0200
+
 ucs-test (4.0.166-65) unstable; urgency=low
 
   * Bug #35584: added small test script that checks if samba/role is 
