Bug #35601: Fixed "always-on DHCP"
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@52672 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-51) unstable; urgency=low
+
+  * Bug #35601: Fixed "always-on DHCP"
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 12 Aug 2014 14:58:24 +0200
+
 univention-system-setup (7.0.69-50) unstable; urgency=low
 
   * Bug #34484: Fixed changing locale during session
