--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-48) unstable; urgency=medium
+
+  * Flush the samba cache before doing a sysvolreset (Bug #35564)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 12 Aug 2014 17:27:17 +0200
+
 univention-management-console-module-adtakeover (1.0.10-47) unstable; urgency=medium
 
   * Add log message (Bug #34776)
