* Fix undefined variable (Bug #33263)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@52676 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-70) unstable; urgency=medium
+
+  * Fix undefined variable (Bug #33263)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 12 Aug 2014 17:27:54 +0200
+
 univention-s4-connector (8.0.33-69) unstable; urgency=medium
 
   * No need to make a fuss about running AD Takeover from AD Member mode,
