* Fix: Stop all winbind processes during samba4 join in 96univention-samba4.inst (Bug #35600)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@52686 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (3.0.39-33) unstable; urgency=low
+
+  * Fix: Stop all winbind processes during samba4 join 
+    in 96univention-samba4.inst (Bug #35600)
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 13 Aug 2014 12:10:37 +0200
+
 univention-samba4 (3.0.39-32) unstable; urgency=medium
 
   * Workaround for parsing of VERSION by joinscript_extern_init (Bug #35252).
