Bug #35605: try to disable telemetry question in FF Bug #35378: removed console-tools from dependency list to avoid conflicts Bug #35378: merged changes from startxwithfirefox_installer back into startxwithfirefox
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52688 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,13 @@
+univention-system-setup (8.0.16-1) unstable; urgency=low
+
+  * Bug #35605: try to disable telemetry question in FF
+  * Bug #35378: removed console-tools from dependency list to avoid
+    conflicts
+  * Bug #35378: merged changes from startxwithfirefox_installer back into
+    startxwithfirefox
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 13 Aug 2014 12:36:00 +0200
+
 univention-system-setup (8.0.15-3) unstable; urgency=low
 
   * Bug #34484: Merged from UCS 3.2-2
