--- a/base/di-univention-system-setup/debian/changelog
+++ b/base/di-univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+di-univention-system-setup (0.0.8-1) unstable; urgency=low
+
+  * Bug #35378: switched from "startxwithfirefox_installer" to
+    "startxwithfirefox --installer"
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 13 Aug 2014 12:40:33 +0200
+
 di-univention-system-setup (0.0.7-1) unstable; urgency=low
 
   * Bug #35378: install system setup via preseed in base-installer
