--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.17-1) unstable; urgency=low
+
+  * Bug #35605: try to disable telemetry question in FF
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 13 Aug 2014 13:30:56 +0200
+
 univention-system-setup (8.0.16-1) unstable; urgency=low
 
   * Bug #35605: try to disable telemetry question in FF
