--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.39-34) unstable; urgency=low
+
+  * Use start-stop-daemon instead of pkill (Bug #35600)
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 13 Aug 2014 15:58:17 +0200
+
 univention-samba4 (3.0.39-33) unstable; urgency=low
 
   * Fix: Stop all winbind processes during samba4 join 
