Bug #35601: Fixed 'always-on DHCP' (merged to UCS 4)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52709 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.18-1) unstable; urgency=low
+
+  * Bug #35601: Fixed "always-on DHCP"
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 12 Aug 2014 14:58:24 +0200
+
 univention-system-setup (8.0.17-1) unstable; urgency=low
 
   * Bug #35605: try to disable telemetry question in FF
