Bug #35610: version bump
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@52712 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,15 @@
+univention-management-console-module-udm (4.0.99-1) unstable; urgency=low
+
+  * Bug #35610: version bump
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 14 Aug 2014 11:47:40 +0200
+
+univention-management-console-module-udm (4.0.98-1) unstable; urgency=low
+
+  * Bug #35610: version bump
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 14 Aug 2014 11:47:30 +0200
+
 univention-management-console-module-udm (4.0.97-43) unstable; urgency=low
 
   * Bug #34093: Wording
