--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-69) unstable; urgency=medium
+
+  * Adjusted a couple of wizard messages (Bug #35602)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 14 Aug 2014 17:51:24 +0200
+
 univention-ad-connector (8.0.17-68) unstable; urgency=medium
 
   * Fix python syntax typo (Bug #35566)
