--- a/services/univention-ad-connector/umc/js/de.po
+++ b/services/univention-ad-connector/umc/js/de.po
@@ -33,15 +33,15 @@ msgstr ""
 #: umc/js/adconnector/SetupWizard.js:89
 msgid ""
 "<p>This wizards guides the configuration of the connection with an existing "
-"Active Directory domain.</p><p>There are two possible ways:</p>"
+"Active Directory domain.</p><p>There are two exclusive options:</p>"
 msgstr ""
-"<p>Dieser Assistent leitet durch die Konfiguration der Verbindung mit einer "
+"<p>Dieser Assistent führt durch die Konfiguration der Verbindung mit einer "
 "bestehenden Active Directory-Domäne.</p><p>Es gibt zwei grunsätzliche "
 "Möglichkeiten:</p>"
 
 #: umc/js/adconnector/SetupWizard.js:205
 msgid ""
-"<p>To achieve a higher level of security, the Active Directory system's root "
+"<p>To achieve a higher level of security, the Active Directory root "
 "certificate should be exported and uploaded here. The Active Directory "
 "certificate service creates that certificate. The necessary steps depend on "
 "the actual Microsoft Windows version and are described in the <a href="
@@ -59,8 +59,8 @@ msgstr ""
 "Konfiguration fortfahren.</p>"
 
 #: umc/js/adconnector/SetupWizard.js:136
-msgid "AD Connection - An error ocurred"
-msgstr "AD Connection - Ein Fehler trat auf"
+msgid "AD Connection - An error occurred"
+msgstr "AD-Verbindung - Ein Fehler trat auf"
 
 #: umc/js/adconnector/ConfigPage.js:132
 msgid "Activate encrypted connection"
@@ -72,11 +72,11 @@ msgstr "Passwortsynchronisation aktivieren"
 
 #: umc/js/adconnector/SetupWizard.js:85
 msgid "Active Directory Connection"
-msgstr "Active Directory Verbindung"
+msgstr "Active Directory-Verbindung"
 
 #: umc/js/adconnector/ConfigPage.js:151
-msgid "Active Directory Server configuration"
-msgstr "Active Directory Server Konfiguration"
+msgid "Active Directory connection SSL configuration"
+msgstr "Active Directory-Verbindung SSL-Konfiguration"
 
 #: umc/js/adconnector/SetupWizard.js:126 umc/js/adconnector/SetupWizard.js:175
 msgid "Active Directory account"
@@ -104,14 +104,14 @@ msgstr "Active Directory-Passwort"
 
 #: umc/js/adconnector/SetupWizard.js:170
 msgid "Address of Active Directory domain controller"
-msgstr "Adresse des Active Directory-Domänencontroller"
+msgstr "Adresse des Active Directory-Domänencontrollers"
 
 #: umc/js/adconnector/SetupWizard.js:121
 msgid ""
 "Address of Active Directory domain controller or name of Active Directory "
 "domain"
 msgstr ""
-"Adresse des Active Directory-Domänencontroller oder Name der Active "
+"Adresse des Active Directory-Domänencontrollers oder Name der Active "
 "Directory-Domäne"
 
 #: umc/js/adconnector/SetupWizard.js:194
@@ -124,15 +124,15 @@ msgstr ""
 #: umc/js/adconnector/ConfigPage.js:119
 msgid ""
 "After the installation the replication of password hashes has to be "
-"activated:"
+"activated."
 msgstr ""
 "Nach der Installation muss die Replikation der Passwort Hashes aktiviert "
-"werden:"
+"werden."
 
 #: umc/js/adconnector/SetupWizard.js:192
 msgid ""
 "An encrypted connection to the Active Directory domain could not be "
-"established. This has as consequence that authentication data is submitted "
+"established. As a consequence authentication data is submitted "
 "in plaintext."
 msgstr ""
 "Es konnte keine verschlüsselte Verbindung zur Active Directory-Domäne "
@@ -145,8 +145,8 @@ msgid ""
 "domain. The following information will give you some more details on which "
 "problems occurred during the join process."
 msgstr ""
-"Ein Fehler trat während des Beitritts von UCS in die Active Directory-Domäne "
-"auf.Die folgenden Informationen enthalten weitere Details über das genauere "
+"Ein Fehler trat während des Beitritts von UCS zur Active Directory-Domäne "
+"auf .Die folgenden Informationen enthalten weitere Details über das genauere "
 "Problem."
 
 #: umc/js/adconnector/SetupWizard.js:337
@@ -158,21 +158,21 @@ msgid ""
 msgstr ""
 "Ein unerwarteter Fehler trat auf. Weitere Informationen über die "
 "Fehlerursache können in der Log-Datei /var/log/univention/management-console-"
-"module-adconnector.log gefunden werden.Bitte führen Sie den Beitritt erneut "
-"durch nachdem entsprechende Fehler behoben wurden."
+"module-adconnector.log gefunden werden. Bitte führen Sie den Beitritt erneut "
+"durch, nachdem entsprechende Fehler behoben wurden."
 
 #: umc/js/adconnector/SetupWizard.js:251
 msgid "Bidirectional synchronisation of UCS and Active Directory."
-msgstr "Bidirektionale Synchronisation zwischen UCS und Active Directory"
+msgstr "Bidirektionale Synchronisation zwischen UCS und Active Directory."
 
 #: umc/js/adconnector/ConfigPage.js:110
 msgid ""
-"By default the Active Directory connection does not transfer passwords into "
+"By default the Active Directory connection does not transfer encrypted password data into "
 "the UCS directory service. The system uses the Active Directory Kerberos "
 "infrastructure for authentication."
 msgstr ""
-"Standardmäßig überträgt die eingerichtete Active Directory Connection keine "
-"Passwörter in den UCS Verzeichnisdienst. Das System nutzt die Active "
+"Standardmäßig überträgt die eingerichtete Active Directory-Verbindung keine "
+"verschlüsselten Passwortdaten in den UCS-Verzeichnisdienst. Das System nutzt die Active "
 "Directory Kerberos Infrastruktur zur Authentifizierung."
 
 #: umc/js/adconnector/SetupWizard.js:356
@@ -181,7 +181,7 @@ msgstr "Abbrechen"
 
 #: umc/js/adconnector/SetupWizard.js:148 umc/js/adconnector/SetupWizard.js:282
 msgid "Completion of Active Directory Connection"
-msgstr "Beenden von Active Directory Verbindung"
+msgstr "Fertigstellung der Active Directory-Verbindung"
 
 #: umc/js/adconnector/SetupWizard.js:230
 msgid "Configuration of Active Directory domain synchronisation"
@@ -219,27 +219,27 @@ msgstr ""
 msgid ""
 "Currently, an unencrypted connection to the Active Directory domain is used."
 msgstr ""
-"Es wird aktuell keine verschlüsselte Verbindung zwischen der UCS und der "
+"Es wird aktuell keine verschlüsselte Verbindung zu der "
 "Active Directory Domäne verwendet."
 
 #: umc/js/adconnector/ConfigPage.js:156
 msgid "Download the password service for Windows and the UCS certificate"
 msgstr ""
-"Herunterladen des UCS-Zertifikats und des Passwort-Dienstes für Windows"
+"Herunterladen des UCS-Zertifikats und des Passwortdienstes für Windows"
 
 #: umc/js/adconnector/DownloadInfo.js:46
 msgid ""
-"During a standard installation, the Windows firewall blocks the access to "
-"the AD Connection service. This must either be deactivated in System "
+"In a standard setup, the Windows firewall blocks the access to "
+"the password service. This must either be deactivated in System "
 "settings or Port 6670/TCP authorised."
 msgstr ""
 "In einer Standard-Installation blockiert die Windows-Firewall die Zugriffe "
-"auf den AD-Verbindungsdienst. Diese muss entweder in der Systemsteuerung "
+"auf den Passwortdienst. Diese muss entweder in der Systemsteuerung "
 "deaktiviert werden oder Port 6670/TCP freigegeben werden. "
 
 #: umc/js/adconnector/SetupWizard.js:165
 msgid ""
-"Enter the Active Directory domain information to configure the connection."
+"Enter the Active Directory domain information to establish the connection."
 msgstr ""
 "Geben Sie die Active Directory-Domäneninformationen ein, um die Verbindung "
 "einzurichten."
@@ -256,13 +256,13 @@ msgstr "Der Import des Zertifikats ist fehlgeschlagen"
 
 #: umc/js/adconnector/ConfigPage.js:111
 msgid ""
-"However, in some szenarios it may be reasonable to transfer passwords. In "
+"However, in some scenarios it may be reasonable to transfer encrypted password hashes. In "
 "this case, The password service should be installed on the Active Directory "
 "server."
 msgstr ""
-"In einigen Szenarien kann es dennoch sinnvoll sein, die Passwörter zu "
+"In einigen Szenarien kann es dennoch sinnvoll sein, die verschlüsselten Passwortdaten zu "
 "übertragen. In diesem Fall sollte der Passwort Dienst auf dem Active "
-"Directory Server installiert werden."
+"Directory-Server installiert werden."
 
 #: umc/js/adconnector/DownloadInfo.js:49 umc/js/adconnector/DownloadInfo.js:51
 #, python-format
@@ -270,7 +270,7 @@ msgid ""
 "Installation file for the password service for <b>%s</b> Windows.<br />It "
 "can be started by double clicking on it."
 msgstr ""
-"Installationsdatei für den Passwort-Dienst für <b>%s</b> Windows.<br />Diese "
+"Installationsdatei für den Passwortdienst für <b>%s</b> Windows.<br />Diese "
 "kann per Doppelklick gestartet werden."
 
 #: umc/js/adconnector/SetupWizard.js:272
@@ -279,26 +279,26 @@ msgstr "Installation des Passwortdienstes"
 
 #: umc/js/adconnector/ConfigPage.js:88
 msgid ""
-"It is also possible to just activate the encrypted connection without a "
-"certificate."
+"It is also possible to just activate the encrypted connection without "
+"certificate verification."
 msgstr ""
-"Es ist auch möglich, lediglich die verschlüsselte Verbindung ohne Zertifikat "
+"Es ist auch möglich, die verschlüsselte Verbindung ohne Zertifikatsprüfung "
 "zu aktivieren."
 
 #: umc/js/adconnector/SetupWizard.js:154
 msgid ""
 "It is necessary for already joined UCS systems to re-join the domain. This "
-"is done via the UMC module <i>Domain join</i> separately on each system."
+"should be done via the UMC module <i>Domain join</i> separately on each system."
 msgstr ""
 "Für bereits gejointe UCS-Systeme ist es notwendig, der Domäne neu "
-"beizutreten. Dies kann über das UMC-Module <i>Domänenbeitritt</i> separat "
+"beizutreten. Dies sollte über das UMC-Module <i>Domänenbeitritt</i> separat "
 "auf jedem System durchgeführt werden."
 
 #: umc/js/adconnector/DownloadInfo.js:67 umc/js/adconnector/DownloadInfo.js:71
 msgid ""
 "It must be copied into the installation directory of the password service."
 msgstr ""
-"Es muss in das Installationsverzeichnis des Passwort-Dienstes kopiert werden."
+"Es muss in das Installationsverzeichnis des Passwortdienstes kopiert werden."
 
 #: umc/js/adconnector/SetupWizard.js:297
 msgid "Join AD domain"
@@ -338,11 +338,11 @@ msgstr "Sicherheitshinweis"
 
 #: umc/js/adconnector/SetupWizard.js:239
 msgid ""
-"Specify the synchronisation direction between the UCS domain and the given "
+"Select the synchronisation direction between the UCS domain and the given "
 "Active Directory domain."
 msgstr ""
-"Geben Sie die Synchronisationsrichtung zwischen der UCS-Domäne und der "
-"angegebenen Active Directory Domäne an."
+"Wählen Sie die Synchronisationsrichtung zwischen der UCS-Domäne und der "
+"angegebenen Active Directory-Domäne aus."
 
 #: umc/js/adconnector/ConfigPage.js:124
 msgid "Start Active Directory connection service"
@@ -358,7 +358,7 @@ msgstr "Passwortsynchronisation deaktivieren"
 
 #: umc/js/adconnector/SetupWizard.js:98
 msgid ""
-"Synchronisation of account data between an Active Directory and a UCS domain."
+"Synchronisation of account data between an Active Directory and this UCS domain."
 msgstr ""
 "Synchronisation von Kontendaten zwischen einer Active Directory und dieser "
 "UCS-Domäne."
@@ -368,15 +368,15 @@ msgid ""
 "The <b>cert.pem</b> file contains the SSL certificates created in UCS for "
 "secure communication."
 msgstr ""
-"Die <b>cert.pem</b> Datei enthält die in UCS erstellten SSL Zertifikate für "
+"Die <b>cert.pem</b> Datei enthält die in UCS erstellten SSL-Zertifikate für "
 "sichere Kommunikation."
 
 #: umc/js/adconnector/DownloadInfo.js:70
 msgid ""
 "The <b>private.key</b> file contains the private key to the SSL certificates."
 msgstr ""
-"Die <b>private.key</b> Datei beinhaltet den privaten Schlüssel des SSL "
-"Zertifikats."
+"Die <b>private.key</b> Datei beinhaltet den privaten Schlüssel des "
+"SSL-Zertifikats."
 
 #: umc/js/adconnector/DownloadInfo.js:43
 msgid ""
@@ -384,15 +384,15 @@ msgid ""
 "installation can be started on the Active Directory domain controller by "
 "double clicking on it."
 msgstr ""
-"Die MSI Dateien sind die Installationsdateien für den Passwort-Dienst. "
+"Die MSI-Dateien sind die Installationsdateien für den Passwortdienst. "
 "Die Installation kann mit einem Doppelklick gestartet werden."
 
 #: umc/js/adconnector/SetupWizard.js:288
 msgid ""
-"The UCS server is now ready for usage, and domain account information are "
+"The UCS server is now ready for usage, and domain account data is "
 "now available."
 msgstr ""
-"Das UCS-System kann nun eingesetzt werden, und Domänen-Kontoinformationen "
+"Das UCS-System kann nun eingesetzt werden und Domänen-Kontodaten "
 "sind verfügbar."
 
 #: umc/js/adconnector/SetupWizard.js:220 umc/js/adconnector/ConfigPage.js:100
@@ -401,14 +401,14 @@ msgstr "Das Zertifikat wurde erfolgreich importiert"
 
 #: umc/js/adconnector/SetupWizard.js:153
 msgid ""
-"The connection with the Active Directory domain has been configured "
+"The connection to the Active Directory domain has been configured "
 "successfully."
 msgstr ""
 "Die Verbindung zur Active Directory Domäne wurde erfolgreich eingerichtet."
 
 #: umc/js/adconnector/ConfigPage.js:72
-msgid "The domain exists in parallel to an Active Directory domain."
-msgstr "Die Domäne existiert parallel zu einer Active Directory-Domäne."
+msgid "The UCS domain exists in parallel to an Active Directory domain."
+msgstr "Die UCS-Domäne existiert parallel zu einer Active Directory-Domäne."
 
 #: umc/js/adconnector/ConfigPage.js:207 umc/js/adconnector/ConfigPage.js:213
 msgid ""
@@ -429,18 +429,18 @@ msgid ""
 "can be started automatically or manually."
 msgstr ""
 "Das Paket ist automatisch im <b>C:\\Windows\\UCS-AD-Connector</b> "
-"Verzeichnis installiert. Zusätzlich ist der Passwort-Dienst als System-"
-"Dienst in die Windows-Umgebung integriert. Dadurch kann der Dienst "
+"Verzeichnis installiert. Zusätzlich ist der Passwortdienst als "
+"Systemdienst in die Windows-Umgebung integriert. Dadurch kann der Dienst "
 "automatisch oder manuell gestartet werden."
 
 #: umc/js/adconnector/SetupWizard.js:331
 #, python-format
 msgid ""
 "The server <i>%(_hostname)s (%(DC_IP)s)</i> is used as Active Directory "
-"Domain Controller for the domain <i>%(Domain)s</i>."
+"domain controller for the domain <i>%(Domain)s</i>."
 msgstr ""
-"Der Server <i>%(_hostname)s (%(DC_IP)s)</i> wird als Active Directory "
-"Domänencontroller für die Domäne <i>%(Domain)s</i> genutzt."
+"Der Server <i>%(_hostname)s (%(DC_IP)s)</i> wird als Active "
+"Directory-Domänencontroller für die Domäne <i>%(Domain)s</i> genutzt."
 
 #: umc/js/adconnector/SetupWizard.js:287
 msgid ""
@@ -464,7 +464,7 @@ msgstr ""
 
 #: umc/js/adconnector/ConfigPage.js:206 umc/js/adconnector/ConfigPage.js:212
 msgid ""
-"To achieve a higher level of security, the Active Directory system's root "
+"To achieve a higher level of security, the Active Directory root "
 "certificate should be exported and uploaded here. The Active Directory "
 "certificate service creates that certificate."
 msgstr ""
@@ -475,7 +475,7 @@ msgstr ""
 #: umc/js/adconnector/SetupWizard.js:193
 msgid ""
 "To enable an encrypted connection, a certification authority needs to be "
-"configured on the Active Directory server. All necessary steps are described "
+"configured on the Active Directory server. All steps necessary are described "
 "in the <a href=\"http://docs.univention.de/manual-3.2.html#ad-connector:ad-"
 "zertifikat\" target=\"_blank\">UCS manual</a>."
 msgstr ""
@@ -508,7 +508,7 @@ msgstr ""
 
 #: umc/js/adconnector/SetupWizard.js:105
 msgid ""
-"Use the second option for more complex szenarios which necessitate that "
+"Use the second option for more complex scenarios which necessitate that "
 "Active Directory and UCS domains exist in parallel."
 msgstr ""
 "Benutzen Sie die zweite Option für komplexere Szenarien, die den "
@@ -516,10 +516,10 @@ msgstr ""
 
 #: umc/js/adconnector/ConfigPage.js:219
 msgid ""
-"When there is a need of adjustment, you may upload a new root certificate of "
+"If there is a need for adjustment, you may upload a new root certificate of "
 "the Active Directory domain."
 msgstr ""
-"Bei Anpassungsbedarf können Sie hier ein neues Root Zertifikat aus der "
+"Bei Anpassungsbedarf können Sie hier ein neues Root-Zertifikat aus der "
 "Active Directory Domäne hochladen."
 
 #~ msgid ""
