--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-70) unstable; urgency=medium
+
+  * Adjusted fuzzy messages (Bug #35602)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 14 Aug 2014 18:04:33 +0200
+
 univention-ad-connector (8.0.17-69) unstable; urgency=medium
 
   * Adjusted a couple of wizard messages (Bug #35602)
