--- a/mail/univention-fetchmail/debian/changelog
+++ b/mail/univention-fetchmail/debian/changelog
@@ -1,3 +1,9 @@
+univention-fetchmail (8.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35264)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 15 Aug 2014 14:24:25 +0200
+
 univention-fetchmail (7.0.0-3) unstable; urgency=low
 
   * version bump (Bug #32541)
