univention-postgrey (3.0.0-1) unstable; urgency=medium
  * Update to UCS 4.0 (Bug #35264)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52755 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-postgrey/debian/changelog
+++ b/mail/univention-postgrey/debian/changelog
@@ -1,3 +1,9 @@
+univention-postgrey (3.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35264)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 15 Aug 2014 15:50:49 +0200
+
 univention-postgrey (2.0.0-2) unstable; urgency=low
 
   * Bug #30945: updated UCR variable descriptions
