* Bug #35466: create socket directory /var/run/univention-management-console before starting module processes if directory does not exists
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52759 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console (7.0.1-1) unstable; urgency=low
+
+  * Bug #35466: create socket directory /var/run/univention-management-console
+  	before starting module processes if directory does not exists
+
+ -- Florian Best <best@univention.de>  Mon, 18 Aug 2014 09:22:13 +0200
+
 univention-management-console (7.0.0-5) unstable; urgency=low
 
   * Move univention-management-console-module-quota from depends to
