--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.19-1) unstable; urgency=low
+
+  * Bug #35466: remove workarounD
+
+ -- Florian Best <best@univention.de>  Mon, 18 Aug 2014 09:40:29 +0200
+
 univention-system-setup (8.0.18-1) unstable; urgency=low
 
   * Bug #35601: Fixed "always-on DHCP"
