* Bug #35466: remove workaround
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52761 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,6 +1,6 @@
 univention-system-setup (8.0.19-1) unstable; urgency=low
 
-  * Bug #35466: remove workarounD
+  * Bug #35466: remove workaround
 
  -- Florian Best <best@univention.de>  Mon, 18 Aug 2014 09:40:29 +0200
 
