--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (0.1.21-2) unstable; urgency=low
+
+  * Switch to UCS-3.2-3 AMIs (Bug #35633)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 18 Aug 2014 13:15:32 +0200
+
 ucs-ec2-tools (0.1.21-1) unstable; urgency=low
 
   * Bug #35437: added automatic KVM detection in utils.sh
