--- a/services/univention-printserver/debian/changelog
+++ b/services/univention-printserver/debian/changelog
@@ -1,3 +1,9 @@
+univention-printserver (8.0.0-2) unstable; urgency=low
+
+  * fixed control file (Bug #35147) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 18 Aug 2014 15:44:19 +0200
+
 univention-printserver (8.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35147)  
