--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-listener (9.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35144) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 18 Aug 2014 17:40:09 +0200
+
 univention-directory-listener (8.0.3-1) unstable; urgency=low
 
   * Retry update after delete by UUID (Bug #35261)
