--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,11 +1,17 @@
-univention-samba4 (4.0.0-1) UNRELEASED; urgency=medium
+univention-samba4 (4.0.0-2) unstable; urgency=medium
+
+  * Adjusted dependencies to updated Samba 4.2 Debian packages (Bug #35319)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 18 Aug 2014 19:39:26 +0200
+
+univention-samba4 (4.0.0-1) unstable; urgency=medium
 
   * version bump for UCS 4.0 (Bug #35319)
   * Adjust for python2.7
   * raise debian/compat to 9
   * Update copyright year
 
- -- Arvid Requate <requate@univention.de>  Mon, 18 Aug 2014 18:21:17 +0200
+ -- Arvid Requate <requate@univention.de>  Mon, 18 Aug 2014 19:37:45 +0200
 
 univention-samba4 (3.0.39-34) unstable; urgency=low
 
