--- a/base/univention-ipcalc/debian/changelog
+++ b/base/univention-ipcalc/debian/changelog
@@ -1,3 +1,9 @@
+univention-ipcalc (6.0.0-2) unstable; urgency=low
+
+  * Fix python2.7 support for UCS-4.0 (Bug #35138)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 18 Aug 2014 19:37:54 +0200
+
 univention-ipcalc (6.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35138)
