changed debian/compat level (Bug #35144)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52789 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-listener (9.0.0-2) unstable; urgency=low
+
+  * changed debian/compat level (Bug #35144) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 19 Aug 2014 10:02:34 +0200
+
 univention-directory-listener (9.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35144) 
