Bug #35386 base: Update package for UCS-4
* Install lsb-release
* Install for python2.7 too.
* Remove obsolete upgrade handling code.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52792 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,11 @@
+univention-base-files (4.0.0-5) unstable; urgency=low
+
+  * Install lsb-release (Bug #35386)
+  * Install for python2.7 too.
+  * Remove obsolete upgrade handling code.
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 19 Aug 2014 09:35:32 +0200
+
 univention-base-files (4.0.0-4) unstable; urgency=low
 
   * Update templates for /etc/init.d/ files (Bug #35522)
