--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,10 @@
+univention-updater (10.0.0-6) unstable; urgency=low
+
+  * Set UCRVs version/* (Bug #35312, Bug #35635)
+  * Remove obsolete upgrade handling code.
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 19 Aug 2014 10:10:10 +0200
+
 univention-updater (10.0.0-5) unstable; urgency=low
 
   * Bug #35508: merge svn52332 and svn52355
