--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-68) unstable; urgency=low
+
+  * 52_s4connector/133sync_sid: added a SID sync test case (Bug #35626)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 19 Aug 2014 10:56:33 +0200
+
 ucs-test (4.0.166-66) unstable; urgency=low
 
   * 67_udm-dns/
