--- a/management/univention-directory-reports/debian/changelog
+++ b/management/univention-directory-reports/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-reports (7.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35144) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 19 Aug 2014 10:58:50 +0200
+
 univention-directory-reports (6.0.0-2) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30946)
