--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,9 @@
+univention-base-files (4.0.0-6) unstable; urgency=low
+
+  * Remove old codenames (Bug #35635)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 19 Aug 2014 11:04:22 +0200
+
 univention-base-files (4.0.0-5) unstable; urgency=low
 
   * Install lsb-release (Bug #35386)
