--- a/base/univention-ssl/debian/changelog
+++ b/base/univention-ssl/debian/changelog
@@ -1,3 +1,9 @@
+univention-ssl (9.0.0-4) unstable; urgency=low
+
+  * readded dependency to univention-directory-listener (Bug #35144) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 19 Aug 2014 11:26:20 +0200
+
 univention-ssl (9.0.0-3) unstable; urgency=low
 
   * Bug #35144: disabled dependency to univention-directory-listener temporarily
