--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (4.0.1-3) unstable; urgency=low
+
+  * fixed python version in hashbang (Bug #34091) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 19 Aug 2014 11:31:30 +0200
+
 univention-lib (4.0.1-2) unstable; urgency=low
 
   * merged changes from 3.2-2 (Bug #34091)
