added univention-ipcalc to dependencies in univention-management-console-module-setup (Bug #35144)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52813 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.0.20-1) unstable; urgency=low
+
+  * added univention-ipcalc to dependencies in 
+    univention-management-console-module-setup (Bug #35144)
+
+ -- Felix Botner <botner@univention.de>  Tue, 19 Aug 2014 11:35:18 +0200
+
 univention-system-setup (8.0.19-1) unstable; urgency=low
 
   * Bug #35466: remove workaround
