--- a/services/univention-pkgdb/debian/changelog
+++ b/services/univention-pkgdb/debian/changelog
@@ -1,3 +1,9 @@
+univention-pkgdb (8.0.0-3) unstable; urgency=low
+
+  * added postgresql 9.1 config templates (Bug #35147) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 19 Aug 2014 11:43:22 +0200
+
 univention-pkgdb (8.0.0-2) unstable; urgency=low
 
   * added dh $@ --with 'python_support' (Bug #35147) 
