* Define SID as single value (Bug #35626) * Use mapping function for single values if one is defined (Bug #35626)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@52816 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-71) unstable; urgency=medium
+
+  * Define SID as single value (Bug #35626)
+  * Use mapping function for single values if one is defined (Bug #35626)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 19 Aug 2014 11:53:39 +0200
+
 univention-s4-connector (8.0.33-70) unstable; urgency=medium
 
   * Fix undefined variable (Bug #33263)
