--- a/services/univention-foomatic-ppds/debian/changelog
+++ b/services/univention-foomatic-ppds/debian/changelog
@@ -1,3 +1,9 @@
+univention-foomatic-ppds (7.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35147) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 19 Aug 2014 12:15:51 +0200
+
 univention-foomatic-ppds (6.0.8-1) unstable; urgency=low
 
   * Split from univention-printserver (Bug #28494)
