updated printer models in join script (Bug #35147)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52823 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-printserver/debian/changelog
+++ b/services/univention-printserver/debian/changelog
@@ -1,3 +1,9 @@
+univention-printserver (8.0.0-3) unstable; urgency=low
+
+  * updated printer models in join script (Bug #35147) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 19 Aug 2014 13:34:02 +0200
+
 univention-printserver (8.0.0-2) unstable; urgency=low
 
   * fixed control file (Bug #35147) 
