* Fixed python traceback from last commit (Bug #35626) * Define SID as single value (Bug #35626) * Use mapping function for single values if one is defined (Bug #35626)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52835 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,4 +1,17 @@
-univention-s4-connector (9.0.0-1) UNRELEASED; urgency=medium
+univention-s4-connector (9.0.2-1) unstable; urgency=medium
+
+  * Fixed python traceback from last commit (Bug #35626)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 19 Aug 2014 15:25:44 +0200
+
+univention-s4-connector (9.0.1-1) unstable; urgency=medium
+
+  * Define SID as single value (Bug #35626)
+  * Use mapping function for single values if one is defined (Bug #35626)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 19 Aug 2014 11:53:39 +0200
+
+univention-s4-connector (9.0.0-1) unstable; urgency=medium
 
   * version bump for UCS 4.0 (Bug #35319)
   * Adjust for python2.7
