--- a/base/univention-server/debian/changelog
+++ b/base/univention-server/debian/changelog
@@ -1,3 +1,9 @@
+univention-server (10.0.0-3) unstable; urgency=low
+
+  * Removed mobile and managed client packages (Bug #31751)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 19 Aug 2014 14:33:19 +0200
+
 univention-server (10.0.0-2) unstable; urgency=low
 
   * Remove dependency on univention-showload (Bug #35138)
