--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.21-1) unstable; urgency=low
+
+  * Bug #31751: Remove managed- and mobile client
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 19 Aug 2014 14:16:16 +0200
+
 univention-system-setup (8.0.20-1) unstable; urgency=low
 
   * added univention-ipcalc to dependencies in 
