Bug #35637 USS: Fix appliance mode
Change appliance mode to trigger on unset server/role instead of
requiring domaincontroller_master, which breaks 05_role/10role when used
from the new Debian based installer.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52840 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,6 +1,7 @@
 univention-system-setup (8.0.21-1) unstable; urgency=low
 
   * Bug #31751: Remove managed- and mobile client
+  * Bug #35637: Fix appliance mode
 
  -- Philipp Hahn <hahn@univention.de>  Tue, 19 Aug 2014 14:16:16 +0200
 
