--- a/base/di-univention-system-setup/debian/changelog
+++ b/base/di-univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+di-univention-system-setup (0.0.9-1) unstable; urgency=low
+
+  * Bug #35378: Remove dummy question
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 19 Aug 2014 14:50:11 +0200
+
 di-univention-system-setup (0.0.8-1) unstable; urgency=low
 
   * Bug #35378: switched from "startxwithfirefox_installer" to
