Bug #35635 server: Set server/role
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52842 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-server/debian/changelog
+++ b/base/univention-server/debian/changelog
@@ -1,6 +1,7 @@
 univention-server (10.0.0-3) unstable; urgency=low
 
   * Removed mobile and managed client packages (Bug #31751)
+  * Set server/role (Bug #35635)
 
  -- Philipp Hahn <hahn@univention.de>  Tue, 19 Aug 2014 14:33:19 +0200
 
