Update to Firefox 24.7 ESR (Bug #35444)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@52848 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/firefox-de/debian/changelog
+++ b/desktop/firefox-de/debian/changelog
@@ -1,3 +1,9 @@
+firefox-de (1:24.7.0esr-1) unstable; urgency=medium
+
+  * Update to Firefox 24.7 ESR (Bug #35444)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Tue, 19 Aug 2014 18:39:13 +0200
+
 firefox-de (1:24.6.0esr-1) unstable; urgency=low
 
   * Update to Firefox 24.6 ESR (Bug #34703)
