Bug #35637 USS: Remove setting locale UCRV.
Setting a locale is no longer necessary for running Univention System
Setup in boot mode.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52859 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.21-2) unstable; urgency=low
+
+  * Bug #35637: Remove setting locale UCRV.
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 20 Aug 2014 09:28:46 +0200
+
 univention-system-setup (8.0.21-1) unstable; urgency=low
 
   * Bug #31751: Remove managed- and mobile client
