Bug #35378: Revert use of in-target [r52841]
it creates a denying policy-rc.d, which prevents starting the OpenLDAP
server and other essential services required for Univention System
Setup.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52860 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/di-univention-system-setup/debian/changelog
+++ b/base/di-univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+di-univention-system-setup (0.0.9-2) unstable; urgency=low
+
+  * Bug #35378: Revert use of in-target [r52841], as it creates a denying
+    policy-rc.d
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 20 Aug 2014 10:18:37 +0200
+
 di-univention-system-setup (0.0.9-1) unstable; urgency=low
 
   * Bug #35378: Remove dummy question
