Adapted python-support, changelogsand copyrights (Bug #35265)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52862 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios-raid/debian/changelog
+++ b/nagios/univention-nagios-raid/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios-raid (4.0.0-1) unstable; urgency=low
+
+  * Starting UCS 4.0 development (Bug #35265)
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 20 Aug 2014 10:24:06 +0200
+
 univention-nagios-raid (3.0.0-1) unstable; urgency=low
 
   * abort join script on failing udm call (Bug #27753)
