--- a/nagios/univention-nagios-ad-connector/debian/changelog
+++ b/nagios/univention-nagios-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios-ad-connector (4.0.0-1) unstable; urgency=low
+
+  * Starting UCS 4.0 development (Bug #35265)
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 20 Aug 2014 10:19:27 +0200
+
 univention-nagios-ad-connector (3.0.1-1) unstable; urgency=low
 
   * Added unjoin script (Bug #32455)
