--- a/nagios/univention-nagios-smart/debian/changelog
+++ b/nagios/univention-nagios-smart/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios-smart (4.0.0-1) unstable; urgency=low
+
+  * Starting UCS 4.0 development (Bug #35265)
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 20 Aug 2014 10:25:59 +0200
+
 univention-nagios-smart (3.0.2-2) unstable; urgency=low
 
   * fixed check_smart_suidwrapper.c (Bug #34041) 
