--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.0-7) unstable; urgency=low
+
+  * Bug #35378: Install recommends by default
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 20 Aug 2014 10:40:12 +0200
+
 univention-dvd (0.2.0-6) unstable; urgency=low
 
   * Bug #35378: removed live-installer from installer
