--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-listener (9.0.1-1) unstable; urgency=medium
+
+  * Use python support (Bug #35144)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 20 Aug 2014 13:54:50 +0200
+
 univention-directory-listener (9.0.0-2) unstable; urgency=low
 
   * changed debian/compat level (Bug #35144) 
