--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -3,7 +3,13 @@ univention-management-console-module-adtakeover (2.0.0-1) unstable; urgency=low
   [ Florian Best ]
   * Bug #35145: Start UCS 4.0 development
 
- -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 18:13:54 +0200
+ -- Arvid Requate <requate@univention.de>  Wed, 20 Aug 2014 14:07:22 +0200
+
+univention-management-console-module-adtakeover (1.0.10-48) unstable; urgency=medium
+
+  * Flush the samba cache before doing a sysvolreset (Bug #35564)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 12 Aug 2014 17:27:17 +0200
 
 univention-management-console-module-adtakeover (1.0.10-47) unstable; urgency=medium
 
