--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.0-9) unstable; urgency=low
+
+  * Revert Bug #30547: Install recommends by default
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 20 Aug 2014 13:50:48 +0200
+
 univention-dvd (0.2.0-8) unstable; urgency=low
 
   * Bug #30547: Install recommends by default
