Bug #35637 ldap: Fix dependency ordering
Fix dependency order to first depend on ACL, then the common server
package:
 u-server-master -dep-> u-ldap-acl-master, u-ldap-server
 u-server-slave  -dep-> u-ldap-acl-slave,  u-ldap-server

Otherwise u-server-slave selects both ACL packages through choosing the
master ACL through
 u-ldap-server -dep-> u-ldap-acl-master | u-ldap-acl-slave
which conflicts with the explicitly selected slave ACL:
 u-ldap-acl-master <-conf-> u-ldap-acl-slave

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52873 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-server/debian/changelog
+++ b/base/univention-server/debian/changelog
@@ -1,3 +1,9 @@
+univention-server (10.0.0-4) unstable; urgency=low
+
+  * Fix dependency ordering (Bug #35637)
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 20 Aug 2014 16:25:51 +0200
+
 univention-server (10.0.0-3) unstable; urgency=low
 
   * Removed mobile and managed client packages (Bug #31751)
